2011-02-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: correct typos; revive some "html" anchors

2011-02-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* docs/gnuplot.doc: add link from `rand` to `random` and use proper 
	  table format in random section
	* term/lua/gnuplot-tikz.help term/lua/gnuplot-tikz.lua: balance
	  backquotes in gnuplot help.
	* src/win/wgraph.c: reorder entries of the graph popup menu

2011-02-21  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.help term/lua/gnuplot-tikz.lua
	term/lua/NEWS term/lua/README term/lua/TODO term/lua.trm:
	Re-work the lua terminal to support ConTeXt and plain TeX in addition
	to TikZ.  Requires TikZ >= 2.0

	* share/LaTeX/Makefile.am: Regenerate the lua terminal *.tex and *.sty
	files from the Makefile rather than keeping them in cvs.

2011-02-21  Bastian Maerkisch  <bmaerkisch@web.de>

	Windows HTML help, SF patch set #3186000.
	* docs/gnuplot.doc: changes for windows html help: update titlepage,
	  comment out old html anchor definitions and links, and add html
	  replacements for tables
	
	* docs/plotstyles.gnu: new variable winhelp used to switch between PDF
	  output for "make pdffigures" and PNG output for windows html help
	  
	* docs/windows/doc2html.c: New help file format converter derived
	  from docs/doc2rtf.c and docs/doc2html.c (Attic)

	* docs/windows/wgnuplot.hhp: New file. HTML help project file.

	* docs/windows/wgnuplot.hhk: New file. HTML help stub index file.

	* docs/windows/wgnuplot.stp: New file. HTML help negative 
	  list for search index generation. Caution: maximum size 512 bytes.

	* src/command.c (help_command): issue error message if helpfile
	  could not be opened, fix table of contents command ("help")
	  
	* src/win/winmain.c (WinExit) [WITH_HTML_HELP]: no need to close
	  help window
	
	* config/makefile.mgw: Optionally modify settings to build and use 
	  HTML help [HTML_HELP]. 
	  
	SF patch set #3186010.